--- a/app/src/main/res/layout/dialog_user_confirm.xml
+++ b/app/src/main/res/layout/dialog_user_confirm.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    layout_height=""
-    layout_width=""
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -26,8 +24,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center"
-            android:text="Are you sure to send this user
-                to MiddleMan?"
+            android:text="@string/confirmation_message"
             android:textAlignment="center"
             android:textColor="@android:color/primary_text_light_nodisable"
             android:textSize="18sp"
@@ -48,7 +45,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             android:background="@android:color/darker_gray"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold"
             android:theme="@style/Theme.MaterialComponents.Light"
@@ -71,7 +68,7 @@
             android:layout_marginRight="4dp"
             android:layout_marginBottom="16dp"
             android:background="@color/purple_500"
-            android:text="Confirm"
+            android:text="@string/confirm"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:theme="@style/Theme.MaterialComponents.Light"
