--- a/app/src/main/res/layout/dialog_receive_status.xml
+++ b/app/src/main/res/layout/dialog_receive_status.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -18,13 +19,13 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center"
-            android:text="@string/confirmation_message"
+            android:text="@string/save_status"
             android:textAlignment="center"
             android:textColor="@android:color/primary_text_light_nodisable"
             android:textSize="18sp"
@@ -33,34 +34,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/cancel_btn"
-            style="@style/TextAppearance.AppCompat.Small"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@android:color/darker_gray"
-            android:text="@string/cancel"
-            android:textColor="@android:color/primary_text_dark"
-            android:textStyle="bold"
-            android:theme="@style/Theme.MaterialComponents.Light"
-            app:backgroundTint="@android:color/darker_gray"
-            app:cornerRadius="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/confirm_btn"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/confirm_btn"
             style="@style/TextAppearance.AppCompat.Small"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
@@ -69,14 +46,14 @@
             android:layout_marginRight="4dp"
             android:layout_marginBottom="16dp"
             android:background="@color/purple_500"
-            android:text="@string/confirm"
+            android:text="@string/ok"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:theme="@style/Theme.MaterialComponents.Light"
             app:backgroundTint="@color/purple_500"
             app:cornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
